--- a/src/components/gallery/gallery.html
+++ b/src/components/gallery/gallery.html
@@ -1,5 +1,5 @@
 <div id="gallery" class="js-gallery">
-  <div class="gallery-heading">
+  <div class="gallery-heading hover" data-outline="#fff">
     <p class="heading__item heading__item--active">Superior Apartment 3BR</p>
     <p class="heading__item">Deluxe Apartment 2BR</p>
     <p class="heading__item">Top Apartment 1BR</p>
